# c-db-agent

./: .env.example  .gitignore  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  agent.py  api.py  codedb.snapshot  config.py  requirements.txt  test_refactoring.py
agent/: __init__.py  builder.py
c-db-tui/: Cargo.toml
c-db-tui/src/: api.rs  main.rs  markdown.rs  state.rs  theme.rs
config/: __init__.py  settings.py
container/: __init__.py  services.py
core/: __init__.py  chat_session.py  llm_client.py  memory_extractor.py  memory_service.py  prompts.py
core/constants/: __init__.py  defaults.py
core/errors/: __init__.py  exceptions.py
core/events/: __init__.py  base.py  domain.py  system.py
core/export/: __init__.py  plan_exporter.py
core/interfaces/: __init__.py  event_bus.py  executor.py  llm.py  memory.py  planner.py  (+6 more)
docs/: TOOL_DEVELOPMENT.md
infrastructure/: __init__.py  db_pool.py  schema_manager.py
subscribers/: __init__.py  console.py  structlog_subscriber.py
tests/: conftest.py  refactoring_smoke.py  test_architecture.py  test_base.py  test_calculator.py  test_console_subscriber.py  test_dag_scheduler.py  test_db_tool.py  test_direct_planner.py  test_email_tools.py  test_engine_scheduler.py  test_execution_efficiency.py  test_integration.py  test_memory_extractor.py  test_memory_service.py  test_reducer_metrics_replay.py  test_registry.py  test_tool_executor.py  test_weather.py  test_web_search.py
tools/: __init__.py  base.py  calculator.py  db_tool.py  email_tool.py  registry.py  weather.py  web_search.py
ui/: __init__.py
(+56 files in other folders)
